SmartHire_App/force-app/main/default/objects/SmartHire_Setting__mdt/SmartHire_Setting__mdt.object-meta.xml
<CustomObject>
    <label>SmartHire Setting</label>
    <pluralLabel>SmartHire Settings</pluralLabel>
</CustomObject> 