SmartHire_App/force-app/main/default/objects/SmartHire_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API_Key</fullName>
                <label>API Key</label>
            </value>
            <value>
                <fullName>Endpoint</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 